# hackcuny-whatsmyip-cicd

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: python-app.yml
app/: .gitignore  README.md  pyproject.toml
app/app/: ip_utils.py
app/tests/: test_app.py
deploy/: app.py  pyproject.toml
deploy/cdk_stacks/: base_stack.py
deploy/tests/unit/: test_base_stack.py
