[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Chapin Bryce <mail@chapinb.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-watcher = "^0.4.1"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
